Configure Java modules correctly
Co-authored-by: Christoph <cschwentker@gmail.com>